# rust-extractor-pattern

./: Cargo.toml  README.md
src/: lib.rs
