[package]
name = "extpat"
version = "0.1.0"
authors = [
    "araraloren <blackcatoverwall@gmail.com>",
]
edition = "2021"
license = "MPL-2.0"
description = "A procedural macro for implement extractor pattern."
repository = "https://github.com/araraloren/rust-extractor-pattern/"
keywords = ["extractor", "proc-macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = [
    "extra-traits",
    "full",
] }
proc-macro2 = "1.0"
quote = "1.0"

[lib]
proc-macro = true
